Changes to be committed: 	modified:   "SC1_2023-main/1\355\232\214\354\260\250/.DS_Store" 	modified:   "SC1_2023-main/1\355\232\214\354\260\250/SC_202308_W1.ipynb" 	modified:   "SC1_2023-main/1\355\232\214\354\260\250/readme"

--- a/SC1_2023-main/1회차/SC_202308_W1.ipynb
+++ b/SC1_2023-main/1회차/SC_202308_W1.ipynb
@@ -1,48 +1,45 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## 1. 코랩 돌아보기"
-      ],
       "metadata": {
         "id": "KKlKoy_CN-YP"
-      }
+      },
+      "source": [
+        "## 1. 코랩 돌아보기"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.getcwd()"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "KCLZ5JcnOCsz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'/Users/rackhyun/work/github/2023_data_translator/SC1_2023-main/1회차'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import os\n",
+        "os.getcwd()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 2. 기본문법"
-      ],
       "metadata": {
         "id": "Q0xhAH3SNynp"
-      }
+      },
+      "source": [
+        "## 2. 기본문법"
+      ]
     },
     {
       "cell_type": "code",
@@ -106,15 +103,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 3. 함수의 정의"
-      ],
       "metadata": {
         "id": "UVysgjV9NzZ1"
-      }
+      },
+      "source": [
+        "## 3. 함수의 정의"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EggqbaGFNzgA"
+      },
+      "outputs": [],
       "source": [
         "def Times(a,b):\n",
         "\ta=a+1\n",
@@ -137,24 +139,24 @@
         " \n",
         "retval = setValue(10)\n",
         "print(retval)"
-      ],
-      "metadata": {
-        "id": "EggqbaGFNzgA"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##4. 반복문"
-      ],
       "metadata": {
         "id": "lhBGTvBLNzmU"
-      }
+      },
+      "source": [
+        "##4. 반복문"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rmJ5YbK-Nzso"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "for i in [1,2,3,4]:\n",
@@ -179,24 +181,24 @@
         "\n",
         "result = [num * 3 for num in a if num % 2 == 0]\n",
         "print(result)"
-      ],
-      "metadata": {
-        "id": "rmJ5YbK-Nzso"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##5 bool 연산, 객체 복사"
-      ],
       "metadata": {
         "id": "z_jA21pDOPKw"
-      }
+      },
+      "source": [
+        "##5 bool 연산, 객체 복사"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0FYLNAOQOO8c"
+      },
+      "outputs": [],
       "source": [
         "#bool \n",
         "1<2\n",
@@ -241,24 +243,24 @@
         "a[0] = 38\n",
         "a\n",
         "b"
-      ],
-      "metadata": {
-        "id": "0FYLNAOQOO8c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##6 세트, 리스트, 튜플 "
-      ],
       "metadata": {
         "id": "7k8sB-_ROW18"
-      }
+      },
+      "source": [
+        "##6 세트, 리스트, 튜플 "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RsQPCwSKOW-m"
+      },
+      "outputs": [],
       "source": [
         "#세트, 값의 모임, 순서없음, {}\n",
         "a={1,2,3}\n",
@@ -335,25 +337,25 @@
         "type(c)\n",
         "3 in c\n",
         "4 in a\n"
-      ],
-      "metadata": {
-        "id": "RsQPCwSKOW-m"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qParErdvOXIK"
+      },
       "source": [
         "##7. 딕셔너리\n",
         " - 키와 값의 쌍, dict 또는 세트로 생성 가능/키로 값 가져오지만/인덱싱 미지원\n"
-      ],
-      "metadata": {
-        "id": "qParErdvOXIK"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JyH0rlLPOXPV"
+      },
+      "outputs": [],
       "source": [
         "d = dict( a=1, b=3, c=5)\n",
         "type(d)\n",
@@ -371,24 +373,24 @@
         "del color['cherry']\n",
         "color.clear()\n",
         " "
-      ],
-      "metadata": {
-        "id": "JyH0rlLPOXPV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##8. 세트 연습"
-      ],
       "metadata": {
         "id": "gc5k2274OmTG"
-      }
+      },
+      "source": [
+        "##8. 세트 연습"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "38tVRRDpOmbN"
+      },
+      "outputs": [],
       "source": [
         "#비어있는 세트 생성하기\n",
         "empty_set = set()\n",
@@ -406,24 +408,24 @@
         "languages | snakes #합집합\n",
         "languages - snakes #차집합\n",
         "snakes - languages #차집합"
-      ],
-      "metadata": {
-        "id": "38tVRRDpOmbN"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##9. 리스트 연습"
-      ],
       "metadata": {
         "id": "rhkZhGFiOmiK"
-      }
+      },
+      "source": [
+        "##9. 리스트 연습"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-b-k6XJiOmo2"
+      },
+      "outputs": [],
       "source": [
         "# 비어있는 리스트 만들기\n",
         "empty_list = []\n",
@@ -486,24 +488,24 @@
         "# +와 * 연산: 리스트 확장 및 복제\n",
         "[1, 2, 3] + [4, 5, 6]\n",
         "[\"a\"] * 2 + [\"b\"] * 3"
-      ],
-      "metadata": {
-        "id": "-b-k6XJiOmo2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##9. 튜플 연습"
-      ],
       "metadata": {
         "id": "cAOFkqcaOmvi"
-      }
+      },
+      "source": [
+        "##9. 튜플 연습"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "a3WFyXt5Om2G"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "# 튜플 생성\n",
@@ -524,24 +526,24 @@
         "digits = digits + (3, 4)\n",
         "# *로 복제\n",
         "(3, 4) * 2 "
-      ],
-      "metadata": {
-        "id": "a3WFyXt5Om2G"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##10. 딕셔너리 연습"
-      ],
       "metadata": {
         "id": "A-LUaTYkOz3f"
-      }
+      },
+      "source": [
+        "##10. 딕셔너리 연습"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7aN7T8E0Oz99"
+      },
+      "outputs": [],
       "source": [
         "# 딕셔너리 생성\n",
         "empty_dict = {}\n",
@@ -575,24 +577,24 @@
         "# 딕셔너리 반환 값이 리스트처럼 활용되어서 인덱싱 가능\n",
         "family['kids'][0] # returns 'bart'\n",
         "family['kids'].remove('lisa') # 'lisa' 삭제"
-      ],
-      "metadata": {
-        "id": "7aN7T8E0Oz99"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 11. 리스트+반복문"
-      ],
       "metadata": {
         "id": "k3UxQq6yO5LH"
-      }
+      },
+      "source": [
+        "## 11. 리스트+반복문"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tMCYwLP_O5ST"
+      },
+      "outputs": [],
       "source": [
         "# nums의 값으로 cubes에 추가\n",
         "nums = [1, 2, 3, 4, 5]\n",
@@ -626,24 +628,24 @@
         "# 딕셔너리 만들기\n",
         "fruits = ['apple', 'banana', 'cherry']\n",
         "fruit_lengths = {fruit:len(fruit) for fruit in fruits} # {'apple': 5,'banana': 6, 'cherry': 6}\n"
-      ],
-      "metadata": {
-        "id": "tMCYwLP_O5ST"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 12. 파일입출력"
-      ],
       "metadata": {
         "id": "QvaXkLb4O9GQ"
-      }
+      },
+      "source": [
+        "## 12. 파일입출력"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_OYUX1GMO9Np"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import tempfile\n",
@@ -704,24 +706,24 @@
         "#모든 예술가 이름 확인\n",
         "for artist_name in artist_name_list_items:\n",
         "    print(artist_name.prettify())"
-      ],
-      "metadata": {
-        "id": "_OYUX1GMO9Np"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 13. numpy"
-      ],
       "metadata": {
         "id": "gDdHsjhJPKII"
-      }
+      },
+      "source": [
+        "## 13. numpy"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oiKZBV9rPKRK"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "\n",
@@ -829,12 +831,30 @@
         "np.std(x)\n",
         "np.var(x)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "oiKZBV9rPKRK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
