--- a/SC1_2023-main/2회차/SC_202308_W2.ipynb
+++ b/SC1_2023-main/2회차/SC_202308_W2.ipynb
@@ -602,10 +602,172 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 14,
       "metadata": {
         "id": "P4wyTYe62q3Z"
       },
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "      <th>mean</th>\n",
+              "      <th>std</th>\n",
+              "      <th>min</th>\n",
+              "      <th>25%</th>\n",
+              "      <th>50%</th>\n",
+              "      <th>75%</th>\n",
+              "      <th>max</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Unnamed: 0</th>\n",
+              "      <td>200.0</td>\n",
+              "      <td>100.500000</td>\n",
+              "      <td>57.879185</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>50.750</td>\n",
+              "      <td>100.50</td>\n",
+              "      <td>150.250</td>\n",
+              "      <td>200.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>TV</th>\n",
+              "      <td>199.0</td>\n",
+              "      <td>147.557789</td>\n",
+              "      <td>85.760155</td>\n",
+              "      <td>0.7</td>\n",
+              "      <td>74.900</td>\n",
+              "      <td>149.80</td>\n",
+              "      <td>219.150</td>\n",
+              "      <td>296.4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>radio</th>\n",
+              "      <td>200.0</td>\n",
+              "      <td>23.264000</td>\n",
+              "      <td>14.846809</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>9.975</td>\n",
+              "      <td>22.90</td>\n",
+              "      <td>36.525</td>\n",
+              "      <td>49.6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>newspaper</th>\n",
+              "      <td>200.0</td>\n",
+              "      <td>30.554000</td>\n",
+              "      <td>21.778621</td>\n",
+              "      <td>0.3</td>\n",
+              "      <td>12.750</td>\n",
+              "      <td>25.75</td>\n",
+              "      <td>45.100</td>\n",
+              "      <td>114.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sales</th>\n",
+              "      <td>200.0</td>\n",
+              "      <td>14.022500</td>\n",
+              "      <td>5.217457</td>\n",
+              "      <td>1.6</td>\n",
+              "      <td>10.375</td>\n",
+              "      <td>12.90</td>\n",
+              "      <td>17.400</td>\n",
+              "      <td>27.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "            count        mean        std  min     25%     50%      75%    max\n",
+              "Unnamed: 0  200.0  100.500000  57.879185  1.0  50.750  100.50  150.250  200.0\n",
+              "TV          199.0  147.557789  85.760155  0.7  74.900  149.80  219.150  296.4\n",
+              "radio       200.0   23.264000  14.846809  0.0   9.975   22.90   36.525   49.6\n",
+              "newspaper   200.0   30.554000  21.778621  0.3  12.750   25.75   45.100  114.0\n",
+              "sales       200.0   14.022500   5.217457  1.6  10.375   12.90   17.400   27.0"
+            ]
+          },
+          "execution_count": 14,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "df1 = pd.read_csv(\"./data/adv.csv\")   # DataFrame만들기\n",
+        "#df1.info()\n",
+        "df1.describe().T  #변수별 요약값을 제시"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 200 entries, 0 to 199\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column      Non-Null Count  Dtype  \n",
+            "---  ------      --------------  -----  \n",
+            " 0   Unnamed: 0  200 non-null    int64  \n",
+            " 1   TV          199 non-null    float64\n",
+            " 2   radio       200 non-null    float64\n",
+            " 3   newspaper   200 non-null    float64\n",
+            " 4   sales       200 non-null    float64\n",
+            "dtypes: float64(4), int64(1)\n",
+            "memory usage: 7.9 KB\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# non-null count : 비어있지 않은 값\n",
+        "df1.info()\n",
+        "\n",
+        "# sum()등은 컬럼 단위로 계산, true = 1 / false = 0 \n",
+        "df1.isnull().sum()\n",
+        "\n",
+        "#특정 컬럼 indexing\n",
+        "df1.TV.isnull().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
       "outputs": [
         {
           "data": {
@@ -637,95 +799,124 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>count</th>\n",
-              "      <td>200.000000</td>\n",
-              "      <td>200.000000</td>\n",
-              "      <td>200.000000</td>\n",
-              "      <td>200.000000</td>\n",
-              "      <td>200.000000</td>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>230.1</td>\n",
+              "      <td>37.8</td>\n",
+              "      <td>69.2</td>\n",
+              "      <td>22.1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>mean</th>\n",
-              "      <td>100.500000</td>\n",
-              "      <td>147.042500</td>\n",
-              "      <td>23.264000</td>\n",
-              "      <td>30.554000</td>\n",
-              "      <td>14.022500</td>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>39.3</td>\n",
+              "      <td>45.1</td>\n",
+              "      <td>10.4</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>std</th>\n",
-              "      <td>57.879185</td>\n",
-              "      <td>85.854236</td>\n",
-              "      <td>14.846809</td>\n",
-              "      <td>21.778621</td>\n",
-              "      <td>5.217457</td>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>17.2</td>\n",
+              "      <td>45.9</td>\n",
+              "      <td>69.3</td>\n",
+              "      <td>9.3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>min</th>\n",
-              "      <td>1.000000</td>\n",
-              "      <td>0.700000</td>\n",
-              "      <td>0.000000</td>\n",
-              "      <td>0.300000</td>\n",
-              "      <td>1.600000</td>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>151.5</td>\n",
+              "      <td>41.3</td>\n",
+              "      <td>58.5</td>\n",
+              "      <td>18.5</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>25%</th>\n",
-              "      <td>50.750000</td>\n",
-              "      <td>74.375000</td>\n",
-              "      <td>9.975000</td>\n",
-              "      <td>12.750000</td>\n",
-              "      <td>10.375000</td>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>180.8</td>\n",
+              "      <td>10.8</td>\n",
+              "      <td>58.4</td>\n",
+              "      <td>12.9</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>50%</th>\n",
-              "      <td>100.500000</td>\n",
-              "      <td>149.750000</td>\n",
-              "      <td>22.900000</td>\n",
-              "      <td>25.750000</td>\n",
-              "      <td>12.900000</td>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>75%</th>\n",
-              "      <td>150.250000</td>\n",
-              "      <td>218.825000</td>\n",
-              "      <td>36.525000</td>\n",
-              "      <td>45.100000</td>\n",
-              "      <td>17.400000</td>\n",
+              "      <th>195</th>\n",
+              "      <td>196</td>\n",
+              "      <td>38.2</td>\n",
+              "      <td>3.7</td>\n",
+              "      <td>13.8</td>\n",
+              "      <td>7.6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>max</th>\n",
-              "      <td>200.000000</td>\n",
-              "      <td>296.400000</td>\n",
-              "      <td>49.600000</td>\n",
-              "      <td>114.000000</td>\n",
-              "      <td>27.000000</td>\n",
+              "      <th>196</th>\n",
+              "      <td>197</td>\n",
+              "      <td>94.2</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>8.1</td>\n",
+              "      <td>9.7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>197</th>\n",
+              "      <td>198</td>\n",
+              "      <td>177.0</td>\n",
+              "      <td>9.3</td>\n",
+              "      <td>6.4</td>\n",
+              "      <td>12.8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>198</th>\n",
+              "      <td>199</td>\n",
+              "      <td>283.6</td>\n",
+              "      <td>42.0</td>\n",
+              "      <td>66.2</td>\n",
+              "      <td>25.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>199</th>\n",
+              "      <td>200</td>\n",
+              "      <td>232.1</td>\n",
+              "      <td>8.6</td>\n",
+              "      <td>8.7</td>\n",
+              "      <td>13.4</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
+              "<p>200 rows × 5 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "       Unnamed: 0          TV       radio   newspaper       sales\n",
-              "count  200.000000  200.000000  200.000000  200.000000  200.000000\n",
-              "mean   100.500000  147.042500   23.264000   30.554000   14.022500\n",
-              "std     57.879185   85.854236   14.846809   21.778621    5.217457\n",
-              "min      1.000000    0.700000    0.000000    0.300000    1.600000\n",
-              "25%     50.750000   74.375000    9.975000   12.750000   10.375000\n",
-              "50%    100.500000  149.750000   22.900000   25.750000   12.900000\n",
-              "75%    150.250000  218.825000   36.525000   45.100000   17.400000\n",
-              "max    200.000000  296.400000   49.600000  114.000000   27.000000"
+              "     Unnamed: 0     TV  radio  newspaper  sales\n",
+              "0             1  230.1   37.8       69.2   22.1\n",
+              "1             2    0.0   39.3       45.1   10.4\n",
+              "2             3   17.2   45.9       69.3    9.3\n",
+              "3             4  151.5   41.3       58.5   18.5\n",
+              "4             5  180.8   10.8       58.4   12.9\n",
+              "..          ...    ...    ...        ...    ...\n",
+              "195         196   38.2    3.7       13.8    7.6\n",
+              "196         197   94.2    4.9        8.1    9.7\n",
+              "197         198  177.0    9.3        6.4   12.8\n",
+              "198         199  283.6   42.0       66.2   25.5\n",
+              "199         200  232.1    8.6        8.7   13.4\n",
+              "\n",
+              "[200 rows x 5 columns]"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "import pandas as pd\n",
-        "df1 = pd.read_csv(\"./data/adv.csv\")   # DataFrame만들기\n",
-        "#df1.info()\n",
-        "df1.describe()  #변수별 요약값을 제시"
+        "df1.dropna()    # missing이 있는 행을 삭제\n",
+        "df1.fillna(0)   # missing을 특정한 값으로 채우기\n",
+        "df1.TV.fillna(1)"
       ]
     },
     {
