--- a/SC1_2023-main/4주차/practice4.ipynb
+++ b/SC1_2023-main/4주차/practice4.ipynb
@@ -435,7 +435,7 @@
    "outputs": [],
    "source": [
     "df5.dropna()#원본에 미적용,원본에 적용하려면 inplace=True\n",
-    "=> 이거는 inner 와 동일함"
+    "#=> 이거는 inner 와 동일함"
    ]
   },
   {
